--- a/app/src/main/res/layout/activity_detail_view_recept.xml
+++ b/app/src/main/res/layout/activity_detail_view_recept.xml
@@ -12,6 +12,10 @@
             android:layout_height="match_parent">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical" android:gravity="top">
+            <ImageButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star"
+                    android:id="@+id/favButton"/>
             <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="300dp" app:srcCompat="@color/colorAccent" android:id="@+id/imageView2"
