--- a/app/src/main/res/layout/fragment_favorit.xml
+++ b/app/src/main/res/layout/fragment_favorit.xml
@@ -7,15 +7,23 @@
                                              android:id="@+id/relativeLayout2"
 >
     <android.support.v7.widget.RecyclerView
-            android:layout_width="395dp"
-            android:layout_height="715dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            tools:listitem="5" android:id="@+id/favRec"/>
+            tools:listitem="5" android:id="@+id/favRec" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/favTextView"/>
+    <TextView
+            android:text="Förrätt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/favTextView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:textSize="30sp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/favRec" android:textAlignment="center"/>
 </android.support.constraint.ConstraintLayout>
