--- a/app/src/main/res/layout/fragment_recept.xml
+++ b/app/src/main/res/layout/fragment_recept.xml
@@ -4,59 +4,63 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent" android:id="@+id/relativeLayout3"
->
+                                             android:background="@drawable/arteagasoskarpa">
     <ImageButton
-            android:src="@color/colorAccent"
+            android:src="@drawable/fisk"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:id="@+id/fishKnapp"
             app:layout_constraintTop_toBottomOf="@+id/meatKnapp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/vegetarisktKnapp"
-            app:layout_constraintBottom_toTopOf="@+id/dessertKnapp"/>
+            app:layout_constraintBottom_toTopOf="@+id/dessertKnapp" android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"/>
     <ImageButton
-            android:src="@color/colorAccent"
+            android:src="@drawable/dessert"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:id="@+id/dessertKnapp"
             app:layout_constraintStart_toEndOf="@+id/vegetarisktKnapp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fishKnapp" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"/>
     <ImageButton
-            android:src="@color/colorAccent"
+            android:src="@drawable/veganskt"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:id="@+id/veganKnapp"
             app:layout_constraintTop_toBottomOf="@+id/vegetarisktKnapp"
             app:layout_constraintEnd_toStartOf="@+id/dessertKnapp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="10dp" android:layout_marginEnd="5dp"/>
     <ImageButton
-            android:src="@color/colorAccent"
+            android:src="@drawable/kott"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:id="@+id/meatKnapp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/forrattKnapp"
             app:layout_constraintBottom_toTopOf="@+id/fishKnapp" android:contentDescription="TODO"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp" android:layout_marginStart="5dp"/>
     <ImageButton
-            android:src="@color/colorAccent"
+            android:src="@drawable/forrat"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:id="@+id/forrattKnapp" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/meatKnapp"
             app:layout_constraintBottom_toTopOf="@+id/vegetarisktKnapp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="50dp"/>
+            android:layout_marginTop="50dp" android:layout_marginBottom="10dp" android:layout_marginEnd="5dp"/>
     <ImageButton
-            android:src="@color/colorAccent"
+            android:src="@drawable/vegetariskt"
             android:layout_width="0dp"
-            android:layout_height="200dp"
+            android:layout_height="0dp"
             android:id="@+id/vegetarisktKnapp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fishKnapp"
             app:layout_constraintTop_toBottomOf="@+id/forrattKnapp"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintBottom_toTopOf="@+id/veganKnapp"/>
+            app:layout_constraintBottom_toTopOf="@+id/veganKnapp" android:layout_marginBottom="10dp"
+            android:layout_marginEnd="5dp"/>
 </android.support.constraint.ConstraintLayout>
