--- a/app/src/main/res/layout/activity_genre_recept_.xml
+++ b/app/src/main/res/layout/activity_genre_recept_.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".GenreRecept_Activity">
+        tools:context=".GenreRecept_Activity"
+        android:background="@drawable/arteagasoskarpa">
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
@@ -14,12 +15,14 @@
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
             android:id="@+id/receptListRec" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/foodCategoryTextView"/>
+            app:layout_constraintTop_toBottomOf="@+id/foodCategoryTextView"
+    />
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/foodCategoryTextView" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
+            android:textColor="@android:color/background_dark"/>
 </android.support.constraint.ConstraintLayout>
