--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,16 +4,16 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent" android:id="@+id/relativeLayout"
->
+                                             android:background="@drawable/arteagasoskarpa">
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
-            <ImageButton
+            <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="250dp" tools:src="@color/colorPrimary"
-                    android:id="@+id/headerKnapp"/>
+                    android:layout_height="wrap_content" app:srcCompat="@drawable/davids_logo"
+                    android:id="@+id/imageView" android:scaleType="center"/>
             <TextView
                     android:text="Utvalda Recept"
                     android:layout_width="match_parent"
