--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#763535</color>
-    <color name="colorAccent">#800D27</color>
+    <color name="colorPrimaryDark">#72EBC9C9</color>
+    <color name="colorAccent">#83800D27</color>
 </resources>
